[project]
name = "kung-fu-pandman"
version = "2.1.3.7"
authors = [
  { name="Dawid Wolkiewicz", email="d.woleek@gmail.com" },
  { name="Alicja Jabłońska" },
]
description = "Modified game of Pacman for threading usage project, adapted to look like Kung Fu Panda"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MS Windows",
]

[project.urls]
"Homepage" = "https://github.com/Woleek/kung-fu-pandman"